--- a/scss/_masthead1.scss
+++ b/scss/_masthead1.scss
@@ -1,6 +1,6 @@
 
 // Styling for the masthead
-header.masthead {
+header.masthead1 {
   padding-top: 10rem;
   padding-bottom: calc(10rem - 56px);
   background-image: url('../img/header-bkp.jpg');
